--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ font: 95%/1.3 TrebuchetMS,Arial,sans-serif;
 }
 
 /* Asheesh's additions */
-.floatleft {
+.callout{
     font-size: 120%;
     background-color: #FFF6BF;
     float: left;
@@ -63,6 +63,6 @@ font: 95%/1.3 TrebuchetMS,Arial,sans-serif;
     border: 2px dashed white;
 }
 
-.floatleft h2 {
+.callout h2 {
     text-align: center;
 }
