--- a/style.css
+++ b/style.css
@@ -1,38 +1,55 @@
 html,body{margin:0;padding:0}
-body{font: 85%/1.3 TrebuchetMS,Arial,sans-serif;
+body{font: 12pt Tuffy,Summersby,Arial,Verdana,sans-serif;
     text-align: left;background: #fff;padding-bottom:20px}
 a { color: #0066B3; background: inherit; text-decoration: none;}
-h1 { font: bold 2.1em Arial, Arial, Sans-Serif; color: #036DA7 }
-h2 { font: bold 1.1em Arial, Arial, Sans-Serif; padding: 0; margin: 0; }
+a img { border: none; }
+h1 { font: bold 2.2em Arial, Arial, Sans-Serif; color: #036DA7 }
+h2 { font: bold 1.5em Arial, Arial, Sans-Serif; padding: 0; margin: 0; }
 
-div#header{width:100%;overflow:hidden;background: #BBD9EE; }
-div#header h1,div#menu{width:770px;margin:0 auto;text-align:left}
-div#header h1{padding: 30px 0 20px;color: #fff}
+.alignleft {
+    float: left;
+    padding: 0 10px 10px 0;
+    }
+
+.alignright {
+    float:right;
+    padding: 0 0 10px 10px;
+    }
+    
+div#header{width:100%;overflow:hidden;background: #666; }
+div#header h1,div#menu{width:770px;margin:0 15px;text-align:left}
+div#header h1{padding: 10px 0 10px;color: #fff}
+div#header h2 {padding: 0 0 20px 0; margin: 0 15px; color: #eee; font-weight: normal;}
+div#header img {margin: 5px 0 0 5px;}
 
 ul#nav,ul#nav li{list-style-type:none;margin:0;padding:0}
-ul#nav{float:right;font-size: 80%}
+ul#nav{float:right;font-size: .9em;}
 ul#nav li{float:left;margin-left: 3px;text-align: center}
-ul#nav a{float:left;width: 95px;padding: 5px 0;background: #E7F1F8;text-decoration:none;color: #666; border-top : 1px solid #fff; border-left : 1px solid #fff; border-right : 1px solid #fff;}
+ul#nav a{float:left;width: 115px;padding: 5px 0;background: rgb(210, 255, 150); text-decoration:none;color: #555; border-top : 1px solid #fff; border-left : 1px solid #fff; border-right : 1px solid #fff;}
 ul#nav a:hover{background: #fff;color: #000}
 ul#nav li.activelink a,ul#nav li.activelink a:hover{background: #FFF;color: #003}
 
-#right {
-	width: 98%
-	float: left;
-	padding: 1em;
+#left {
+	padding: 1em 4em 1em 1em;
 	margin-bottom: 1.2em;
+	margin-right: 270px;
 	background: #eee;
 	text-align: justify;
 }
 
-#left {
+#right {
 	float: right;
-	width: 20%;
-	margin: 0 0 10px 0;
-	
-}
+	width: 250px;
+	margin: 0 0 0 10px; }
 
-#left .box {
+#right img {
+    width: 250px;
+    border:none;
+    margin: 0;
+    padding:0;
+    }
+
+#right .box {
 	padding: 1em;
 	margin: 0 0 1em 0;
 	background : #FFF6BF;
@@ -40,7 +57,6 @@ ul#nav li.activelink a,ul#nav li.activelink a:hover{background: #FFF;color: #003
 
 
 #content {
-font: 95%/1.3 TrebuchetMS,Arial,sans-serif;
 	margin: 0 auto;
     padding: 15px;
 	background: #fff;
@@ -54,13 +70,13 @@ font: 95%/1.3 TrebuchetMS,Arial,sans-serif;
 
 /* Asheesh's additions */
 .callout{
-    font-size: 120%;
-    background-color: #FFF6BF;
+    font-size: 1.1em;
+    background-color: rgba(200, 255, 10, 0.3);
     float: left;
     width: 36%;
     margin: 2%;
     padding: 10px;
-    border: 2px dashed white;
+    border: 2px solid white;
 }
 
 .callout h2 {
