--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html,body{margin:0;padding:0}
-body{font: 12pt Tuffy,Summersby,Arial,Verdana,sans-serif;
+body{font: 12pt Summersby,Arial,Verdana,sans-serif;
     text-align: left;background: #fff;padding-bottom:20px}
 a { color: #0066B3; text-decoration: none;}
 a img { border: none; }
