made an extra extra small rule for the top bar of images so they shrink properly, then appear full size under 500px

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -118,3 +118,9 @@ h1 {
 .media-heading {
   margin-bottom:10px;
 }
+
+@media (max-width: 500px) {
+  .col-xxs-12, .col-xxs-12 .img-responsive {
+    width: 100%;
+  }
+}
